fixed 'Selector' field wrapping
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@11565 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -1586,6 +1586,7 @@ div .panel_block .dlg_cross, td .panel_block .dlg_cross { display: none; }
 	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5) inset;
 	background: #FFFFFF;
 	cursor: auto;
+	white-space: nowrap;
 }
 
 .iphone_field input { -webkit-appearance: none; font: bold 17px Helvetica; border: none; }
